# simroll

./: LICENSE  README.md  bjj-domain-model.md  data-design.md  pyproject.toml
docs/: architecture.md  iteration-1-plan.md  project-requirements.md  roadmap.md
simroll/: __init__.py
simroll/data/: grips.yaml  positions.yaml  transitions.yaml
simroll/models/: __init__.py  grip.py  position.py  transition.py
tests/: test_models.py
