[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "simroll"
version = "0.1.0"
description = "A graph-based Brazilian Jiu-Jitsu simulation foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "PyYAML>=6.0,<7",
    "pytest>=8.2,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
